--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ test:
 production:
   adapter: postgresql
   database: ec_dev_db_production
-  username: postgres
-  password: sasa
+  #username: postgres
+  #password: sasa
   pool: 5
   timeout: 5000
